[package]
name = "prkorm"
version = "0.5.2"
edition = "2021"
keywords = ["SQL", "database", "orm", "web-programming", "mysql"]
categories = ["database", "web", "web-programming::http-server"]
license = "MIT"
description = "A procedural macro that simplifies the creation of mysql queries for fields in your Rust structs. It comes with SELECT, INSERT, UPDATE, DELETE operations with JOINS, SUBQUERIES and other complex queries."
repository = "https://github.com/prk-Jr/prkorm.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
syn = "2.0.32"
quote = "1.0.33"
proc-macro2 = "1.0"
